# moq-rs

./: Cargo.toml  HARDWARE_ACCELERATION.md  README.md  setup-sdl2.ps1  start-all.ps1  start-receiver.ps1  start-relay.ps1  start-streamer.ps1
certs/: cert.pem  key.pem
moq-receiver/: Cargo.toml  README.md  setup-nvidia.ps1  setup-sdl2.ps1
moq-receiver/src/: main.rs
moq-relay/: config.toml
moq-streamer/: Cargo.toml  setup-nvidia.ps1
moq-streamer/src/: capture.rs  encoder.rs  hevc_encoder.rs  main.rs  mod.rs  publisher.rs
moq-unity/: NextSteps.md  Readme.md
moq-unity/Assets/MoqUnity/: MoqVideoReceiver.cs
moq-unity/Assets/MoqUnity/Editor/: MoqBuildProcessor.cs
moq-unity/NativePlugin/: CMakeLists.txt  MoqNativePlugin.cpp  MoqNativePlugin.h  build.bat  build.sh
moq-x265/: Cargo.toml  README.md  build.rs  setup-env.ps1  setup-nvidia.ps1  setup-x265.ps1  test-x265.ps1
moq-x265/examples/: test_decoder.rs  test_nvidia.rs  test_x265.rs
moq-x265/output/: all_frames.hevc  first_frame.hevc  keyframe_120.hevc  keyframe_60.hevc
moq-x265/src/: lib.rs  nvidia.rs
moq-x265/src/cuda/: context.rs  device.rs  mod.rs
moq-x265/x265/lib/x64/: x265.exp  x265.lib
moq-x265/x265/lib/x86/: x265.exp  x265.lib
nvidia-video-codec-rs/: Cargo.toml
nvidia-video-codec-rs/nvidia-video-codec-sys/: Cargo.toml  build.rs
nvidia-video-codec-rs/nvidia-video-codec-sys/src/: lib.rs
nvidia-video-codec-rs/src/: lib.rs  macros.rs
nvidia-video-codec-rs/src/cuda/: context.rs  mod.rs
