[package]
name = "moq-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
url = "2.3"
display-capture = "0.1.1"
scrap = "0.5"
image = "0.24"
moq-native = { path = "../moq-native" }
moq-transfork = { path = "../moq-transfork" }
moq-karp = { path = "../moq-karp" }
x264 = "0.5" 