[package]
name = "moq-streamer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
url = "2.3"
# display-capture = "0.1.1"  # This crate is not available
scrap = "0.5"
image = "0.24"
moq-native = { path = "../moq-native" }
moq-transfork = { path = "../moq-transfork" }
moq-karp = { path = "../moq-karp" }
moq-x265 = { path = "../moq-x265", features = ["hardware-accel"] }
# x264 = "=0.4.0"  # Removing x264 dependency
# Adding Windows Media Foundation dependencies
windows = { version = "0.60.0", features = ["Media_MediaProperties", "Media_Devices", "Media_Core", "Media_Capture", "Media_Transcoding", "Foundation", "Storage", "Storage_Streams", "Win32_Media_MediaFoundation"] }
windows-media = "0.23.0" 