[package]
name = "moq-x265"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for x265 HEVC encoder/decoder with optional NVIDIA hardware acceleration"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
libc = "0.2"
thiserror = "1.0"
bytes = "1.0"
image = "0.24"
tracing = "0.1"
lazy_static = "1.4"

# Optional dependencies for NVIDIA hardware acceleration
nvidia-video-codec = { path = "../nvidia-video-codec-rs", optional = true }

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
pkg-config = "0.3"

[features]
default = []
hardware-accel = ["nvidia-video-codec"] 