[package]
name = "nvidia-video-codec"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "NVIDIA Video Codec bindings"
repository = "https://github.com/rust-av/nvidia-video-codec-rs"
readme = "README.md"
keywords = ["NVIDIA", "cuvid", "nvenc"]
edition = "2021"

[dependencies]
nvidia-video-codec-sys = { version = "0.1.0", path = "nvidia-video-codec-sys" }
anyhow = "1.0"

